--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
   <body>
     <section class="first-section">
-      <h1>Make Your Site Move with <br />Animation</h1>
+      <h1>In Pizza we crust. <br />Pizza Power!</h1>
       <div class="images-wrapper">
         <img class="section_1_bg" src="img/section_1_bg.webp" />
         <div class="ingredient-images">
@@ -36,8 +36,8 @@
       </div>
     </section>
     <section class="second-section">
-      <h1>Draw Attention Where You Want it Most</h1>
-      <p>A great animation effect is impossible to ignore.</p>
+      <h1>Perfect Has 7 Letters So Does Pizza</h1>
+      <p>The pleasure of finding difference and variety on your plate.</p>
       <div class="images-wrapper bottom">
         <div class="image-container">
           <img class="section_2_06" src="img/section_2_06.webp" />
@@ -74,8 +74,8 @@
       </div>
     </section>
     <section class="third-section">
-      <h1>Animate Anything You Want</h1>
-      <p>Easily add animation to text, photos, buttons & more.</p>
+      <h1>We Do What You Fancy</h1>
+      <p>Try and stop at just one slice....</p>
       <div class="images-wrapper">
         <img class="section_3_06" src="img/section_3_06.webp" />
         <img class="section_3_05" src="img/section_3_05.webp" />
@@ -86,8 +86,8 @@
       </div>
     </section>
     <section class="forth-section">
-      <h1>14 Types of Animation</h1>
-      <p>With so many different effects, the possibilities are endless.</p>
+      <h1>Pan Pizza Just Got Awesomer.</h1>
+      <p>Already ready? As nature teaches us, Better Ingredients. Better Pizza.Now Break the chains and chase the flavors.</p>
       <div class="images-wrapper">
         <img class="section_4_01" src="img/section_4_01.webp" />
         <img class="section_4_02" src="img/section_4_02.webp" />
